languages/montiarc-fe/src/test/resources/contextconditions/valid/ComponentInstanceNamesUnique.arc
package valid;

component ComponentInstanceNamesUnique {
 
  component Inner {}
  component Inner innerOther;
  
  component Inner2 i {}
  component Inner iOther;
  
}