languages/montiarc-fe/src/test/resources/contextconditions/invalid/ComponentInstanceNamesNotUnique.arc
package invalid;

component ComponentInstanceNamesNotUnique {
 
  component Inner {}
  component Inner inner;
  
  component Inner2 i {}
  component Inner i;
  
}